TestSuite/errors/err0135.pas

const s : record a : integer end = (a:2);
const i : integer = s;
    
begin
end.